# hub

./: .cz.toml  .cz.yaml  .dockerignore  .env.sample  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.db-based  Dockerfile.db-based-migrations  Dockerfile.ee  LICENSE  README.md  config-example.yaml  config.yaml  rust-toolchain.toml
.sqlx/: query-00186f72a9d187814c526886ec3be987d210c857cc3aa9ca2c6cb0352ff2f47a.json  query-05a759e1f84365c0b7167a2d70709386c03464662b87e64dccf3e6a2651c3db5.json  query-10a737cab44dbca321b03fdaa4cb46b6361f2feaf6d426000cc5caad83b87697.json  query-16adea128678d5377e2ca8b0c474a9ad8b1cc77017b52ad4959f2e5e3241476e.json  (+15 more)
ee/: Cargo.toml  LICENSE.EE
ee/.sqlx/: query-02899d32ace7803f123de6865abb6f864e0d1396af0e0d51eecc67b4243a073b.json  query-08336195bb559400f859f34390ba90b5396f3f41aceb4b2bf33d0c2e50740704.json  query-09f3edb510f3ffb899b247bc1d346395072e8c5e0ac71e5a943fa24f24d9628e.json  query-0e5d9d506dd318bfdb532233daa63ae35fd4f876d92263d51ca837165fb0fd3d.json  query-1c4a9eb268d42e9a9b730433871326d7de00d50a54e41d4fa7cfa518899376e5.json  query-26e0b2512c445e25749ff3318ebce72c10347f07e2f63608d71452b71b7afcb4.json  query-33a16092f72b1216b9e327790c6724748da29958ea161ddcae252c81e8091a3f.json  query-37da513ae788a342883b931cf7f3978cebfec76b09c26ebd33053f93129d3163.json  query-5284260e4c0de3a6709fcdfb6b4a7dd888941200f19237f05f3a285c13312310.json  query-5626477b8a10e37f558ac9b1d56ff4850a30070745daf979131dec1fc1a643f6.json  query-5d364cc595d96c06ad0dfdcaf6bda82a4752c0f138a23b35db2b05a4f590a03e.json  query-60489c2e2faeb54668f000965bc38fbc4e59b7ffc67f214c933e8342ad54b431.json  query-841dc8de845d90984c5c2cfea0ea3f8c55ad7695ce5f2dda3b7b6e800acdd6fe.json  query-88d15c7d02c148b8a257dbe73971af7dd4422d4f93f543063e4e0ed5755241f6.json  query-9dc0118ab7826023abc9455448e60212dd9d0c5399af6e03f26921742124512d.json  query-9f400708d6eb91df65cae45a5b336dd552ab61381611dafee6825fbe183624ee.json  query-9fca7f47f198cacba215be3f3bdeda5ff440d84e144d00f52bc85cb36dc382d3.json  query-c4bfd132797bd4d2d3b879820dcd75ac8e877ca68adbbc47f66e6406f904e9c3.json  query-c54593c015885cf7f47fc689a089f77c9856a38aca5142215d112655efcf80aa.json  query-d3af2ae94cba2abe98f581d2d0b70c85a9dce53dd76f3f33d811147723bb0616.json  query-d89f96a4241ecd3b5c2eb22a019511d6b53c2107a812d5f1c8a854da9e0f5c27.json  query-ddabb58e1580baa6d2643f725dfb50bab8fa6977cea45287deea1861c0a833ad.json  query-e053ca7eb0c3a95cbe3bc94efa21d3bb998e091a7e77fbf8d5f2c390aa0b71f3.json  query-e4a311b593775578f636f76a28e5eeddb9794d128421dadb3bff6f42e7e81204.json  query-f327cf34613a0126478ea6455922414dc8e6e3cfe7ff2018f99f334896b5b69b.json  query-f570a1723a71b20d77bec23599190eaf738f840bc623189f552f337905830c51.json  query-fa69e25f604ab52ffb3f1bb45b9714628bf9f92e5bc7e21ed5ee4964da1927a2.json  query-fc62f4fb30c4bc6462fad28ebe4b12443d0fb563fac4d588130d57c70e764a90.json  query-fcd5dc8f89e83cc2bde442c5345cba7576227cffaa2dcde79102481ef37399d1.json
ee/migrations/: 20250515052350_initial_ee_schema.sql  20250515125629_create_model_definitions_table.sql  20250518073526_create_pipelines_and_plugins_tables.sql
ee/src/: dto.rs  errors.rs  lib.rs  state.rs
ee/src/api/: mod.rs
ee/src/api/routes/: mod.rs  model_definition_routes.rs  pipeline_routes.rs  provider_routes.rs
ee/src/db/: mod.rs  models.rs
ee/src/db/repositories/: mod.rs  model_definition_repository.rs  pipeline_repository.rs  provider_repository.rs
ee/src/services/: config_provider_service.rs  mod.rs  model_definition_service.rs  pipeline_service.rs  provider_service.rs  secret_resolver.rs
ee/tests/: model_definition_api_tests.rs  pipelines_api_integration_tests.rs  provider_api_tests.rs
hub_gateway_core_types/: Cargo.toml
hub_gateway_core_types/src/: lib.rs
src/: Cargo.toml  handlers.rs  lib.rs  main.rs  models.rs  openapi.rs  routes.rs  state.rs  utils.rs
src/ai_models/: instance.rs  mod.rs  registry.rs
src/chat/: handlers.rs  models.rs
src/config/: constants.rs  database.rs  hash.rs  lib.rs  mod.rs  models.rs  source.rs  validation.rs
src/guardrails/: GUARDRAILS.md  api_control.rs  builder.rs  evaluator_types.rs  executor.rs  guardrails_orchestrator.rs  guardrails_runner.rs  input_extractor.rs  middleware.rs  mod.rs  parsing.rs  response_parser.rs  runner.rs  setup.rs  span_attributes.rs  stream_buffer.rs  types.rs
src/guardrails/providers/: mod.rs  traceloop.rs
src/handlers/: chat.rs  completion.rs  embeddings.rs  mod.rs
src/management/: dto.rs  errors.rs  mod.rs  state.rs
src/management/api/routes/: mod.rs  model_definition_routes.rs  pipeline_routes.rs  provider_routes.rs
src/management/db/: models.rs
src/management/db/repositories/: mod.rs  model_definition_repository.rs  pipeline_repository.rs  provider_repository.rs
src/management/services/: config_provider_service.rs  mod.rs  model_definition_service.rs  pipeline_service.rs  provider_service.rs  secret_resolver.rs
src/models/: chat.rs  common.rs  completion.rs  content.rs  embeddings.rs  instance.rs  logprob.rs  mod.rs  registry.rs  response_format.rs  responses.rs  streaming.rs  tool_calls.rs  tool_choice.rs  tool_definition.rs  usage.rs  vertexai.rs
src/pipelines/: mod.rs  otel.rs  pipeline.rs  plugin.rs  tracing_middleware.rs
src/pipelines/plugins/: logging.rs  mod.rs  model_router.rs  tracing.rs
src/pipelines/services/: mod.rs  model_router.rs
src/providers/: anthropic.rs  azure.rs  base.rs  mod.rs  openai.rs  provider.rs  registry.rs  trait.rs
src/providers/anthropic/: mod.rs  models.rs  provider.rs  test.rs
src/providers/azure/: mod.rs  provider.rs
src/providers/bedrock/: mod.rs  models.rs  provider.rs  test.rs
src/providers/bedrock/logs/: ai21_j2_mid_v1_completions.json  ai21_jamba_1_5_mini_v1_0_chat_completions.json  amazon_titan_embed_text_v2_0_embeddings.json  anthropic_claude_3_haiku_20240307_v1_0_chat_completion.json  us_amazon_nova_lite_v1_0_chat_completion.json
src/providers/openai/: mod.rs  provider.rs  test.rs
src/providers/vertexai/: mod.rs  models.rs  provider.rs  tests.rs
src/routers/: management.rs  mod.rs  proxy.rs
src/types/: mod.rs
(+82 files in other folders)
