[package]
name = "hub"
version = "0.4.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7"
tokio = { version = "1.45.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
serde_yaml = "0.9"
tower = { version = "0.5.1", features = ["full"] }
anyhow = "1.0.92"
chrono = "0.4.38"
opentelemetry = { version = "0.27", default-features = false, features = [
    "trace",
] }
opentelemetry_sdk = { version = "0.27", default-features = false, features = [
    "trace",
    "rt-tokio",
] }
opentelemetry-semantic-conventions = { version = "0.27.0", features = [
    "semconv_experimental",
] }
opentelemetry-otlp = { version = "0.27.0", features = [
    "http-proto",
    "reqwest-client",
    "reqwest-rustls",
] }
axum-prometheus = "0.7.0"
reqwest-streams = { version = "0.8.1", features = ["json"] }
futures = "0.3.31"
async-stream = "0.3.6"
yup-oauth2 = "8.3.0"
aws-sdk-bedrockruntime = "1.66.0"
aws-config = "1.5.12"
aws-credential-types = { version = "1.2.1", features = [
    "hardcoded-credentials",
] }
http = "1.1.0"
aws-smithy-runtime = { version = "1.7.6", features = ["test-util"] }
aws-smithy-types = "1.2.11"
aws-types = "1.3.3"
tower-http = { version = "0.5", features = ["trace"] }
uuid = { version = "1.16.0", features = ["v4"] }
# Pin base64ct to avoid edition2024 requirement
base64ct = "=1.6.0"

# EE dependencies - only included when ee_feature is enabled
ee = { path = "ee", optional = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"], optional = true }

hub_gateway_core_types = { path = "hub_gateway_core_types" }

[features]
ee_feature = ["dep:ee", "dep:sqlx"]

[lib]
name = "hub_lib"
path = "src/lib.rs"

[workspace]
members = [
    ".",
    "hub_gateway_core_types",
    "ee",
]

[dev-dependencies]
surf = "2.3.2"
surf-vcr = "0.2.0"
wiremock = "0.5"
