[package]
name = "hub"
version = "0.4.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
serde_yaml = "0.9"
tower = { version = "0.5.1", features = ["full"] }
anyhow = "1.0.92"
chrono = "0.4.38"
opentelemetry = { version = "0.27", default-features = false, features = [
    "trace",
] }
opentelemetry_sdk = { version = "0.27", default-features = false, features = [
    "trace",
    "rt-tokio",
] }
opentelemetry-semantic-conventions = { version = "0.27.0", features = [
    "semconv_experimental",
] }
opentelemetry-otlp = { version = "0.27.0", features = [
    "http-proto",
    "reqwest-client",
    "reqwest-rustls",
] }
axum-prometheus = "0.7.0"
reqwest-streams = { version = "0.8.1", features = ["json"] }
futures = "0.3.31"
async-stream = "0.3.6"
yup-oauth2 = "8.3.0"
aws-sdk-bedrockruntime = "1.66.0"
aws-config = "1.5.12"
aws-credential-types = { version = "1.2.1", features = [
    "hardcoded-credentials",
] }
http = "1.1.0"
aws-smithy-runtime = { version = "1.7.6", features = ["test-util"] }
aws-smithy-types = "1.2.11"
aws-types = "1.3.3"
uuid = { version = "1.16.0", features = ["v4"] }

[dev-dependencies]
surf = "2.3.2"
surf-vcr = "0.2.0"
wiremock = "0.5"
