[package]
name = "ee"
version = "0.1.0"
edition = "2021"
license = "SEE LICENSE IN LICENSE.EE" # Placeholder for the specific EE license

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8.3", features = ["macros"] } # Updated to 0.8.3
tokio = { version = "1.0", features = ["full"] } # Ensure compatibility
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres", "macros", "chrono", "uuid", "json", "migrate" ] } # Added migrate feature
utoipa = { version = "4.2.0", features = ["axum_extras", "chrono", "uuid", "openapi_extensions"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] } # Check for latest and axum feature
chrono = { version = "0.4", features = ["serde"] } # Added chrono for DateTime<Utc> in DTOs, ensure consistent version
uuid = { version = "1.8.0", features = ["v4", "serde"] }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }

[dev-dependencies]
# Add development dependencies like those for testing
testcontainers = "0.20.0" # Core testcontainers
testcontainers-modules = { version = "0.8.0", features = ["postgres"] } # Downgraded for compatibility with testcontainers 0.20.0
axum-test = "17.3.0"  # Matching version from user's successful compile log for axum-test
# tokio is already a main dependency, ensure its features are sufficient or add it here with test-specific features if needed.
# serde_json is also a main dependency.
