[package]
name = "hub_gateway_core_types"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9" # For YAML specific attributes if any, and for deserialization context
serde_json = "1.0" # For JsonValue type and general JSON ser/de
uuid = { version = "1.6", features = ["v4", "serde"] } # For optional ee_id fields

# Optional, if we decide to put Arc<RwLock<GatewayConfig>> management partially here, but likely not.
# tokio = { version = "1", features = ["sync"] } 